# Facultad

./: ListaDoblementeEnlazada.cpp  Oca_POO.rar  README.md  main.cpp
FinalDiciembre2023/: biblioteca.cpp  biblioteca.h  ejemplar.cpp  ejemplar.h  libro.cpp  libro.h  main.cpp
FinalDiciembre2024/: alumno.cpp  alumno.h  curso.cpp  curso.h  main.cpp
FinalNov2024/: cargo.cpp  cargo.h  empresa.cpp  empresa.h  finalnov2024.txt  main.cpp  usuario.cpp  usuario.h
Oca_POO/: Makefile  Makefile.Debug  Makefile.Release  Oca_POO.pro  README.md  archivos.qrc  casilla.cpp  casilla.h  casillacalavera.cpp  casillacalavera.h  casillacarcel.cpp  casillacarcel.h  casillajardindelaoca.cpp  casillajardindelaoca.h  casillalaberinto.cpp  casillalaberinto.h  casillaoca.cpp  casillaoca.h  casillaposada.cpp  casillaposada.h  casillapozo.cpp  casillapozo.h  casillapuente.cpp  casillapuente.h  casillasinefecto.cpp  casillasinefecto.h  dado.cpp  dado.h  juego.cpp  juego.h  jugador.cpp  jugador.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapa.cpp  mapa.h  ui_mainwindow.h
amortizacion/: Bien.cpp  Bien.h  comun.cpp  comun.h  gestorbienes.cpp  gestorbienes.h  main.cpp  mueble.cpp  mueble.h  terrenos.cpp  terrenos.h
finalnov2025/: main.cpp
mensajes/: email.cpp  email.h  (+6 more)
obrasocial_parcial/: CMakeLists.txt  main.cpp  obrasocial.cpp  obrasocial.h  plan.cpp  plan.h  usuarios.cpp  usuarios.h
parcial_a/: CMakeLists.txt  cliente.cpp  cliente.h  gestor.cpp  gestor.h  horas.cpp  horas.h  main.cpp  mensual.cpp  mensual.h  objetivos  serviciosbase.cpp  serviciosbase.h  solicitud.cpp  solicitud.h
(+19 files in other folders)
